--- a/src/scss/layouts/_product-pricing.scss
+++ b/src/scss/layouts/_product-pricing.scss
@@ -3,7 +3,7 @@
 }
 
 .pricing-card-grid {
-  > div {
+  > div[role='row'] {
     @apply grid gap-6 items-center;
   }
 }
@@ -17,9 +17,8 @@
 }
 
 .pricing-card__best {
-  transform: translateX(-50%);
-
   @apply absolute -top-5 left-1/2 inline-block py-2 px-5 font-bold font-ardela-edge rounded-full;
+  @apply -translate-x-1/2;
 }
 
 .best--value {
@@ -60,7 +59,7 @@
 
 @screen sm {
   .pricing-card-grid {
-    > div {
+    > div[role='row'] {
       @apply grid-cols-2;
     }
   }
@@ -68,7 +67,7 @@
 
 @screen xl {
   .pricing-card-grid {
-    > div {
+    > div[role='row'] {
       @apply grid-cols-4;
     }
   }
