--- a/src/scss/layouts/_special-offer-banner.scss
+++ b/src/scss/layouts/_special-offer-banner.scss
@@ -1,7 +1,7 @@
-.special-banner {
+.special-offer {
   @apply py-1 bg-primary;
 }
 
-.special-banner__text {
+.special-offer__text {
   @apply font-bold text-sm tracking-wide text-center uppercase;
 }
