Apply created utility

--- a/src/scss/layouts/_footer.scss
+++ b/src/scss/layouts/_footer.scss
@@ -26,9 +26,7 @@
   @apply flex flex-col items-center mt-6 space-y-2;
 
   a {
-    text-underline-offset: 0.25em;
-
-    @apply underline;
+    @apply underline underline-offset;
   }
 }
 
