--- a/src/scss/layouts/_product-overview.scss
+++ b/src/scss/layouts/_product-overview.scss
@@ -4,13 +4,13 @@
 
 .product-overview-grid,
 .product-info {
-  > div[role='row'] {
+  > div {
     @apply grid;
   }
 }
 
 .product-overview-grid {
-  > div[role='row'] {
+  > div {
     @apply gap-4 items-center;
   }
 }
@@ -29,8 +29,8 @@
 
 @screen sm {
   .product-info {
-    > div[role='row'] {
-      @apply grid-cols-2;
+    > div {
+      @apply gap-4 grid-cols-2;
     }
   }
 }
@@ -43,22 +43,22 @@
 
 @screen lg {
   .product-overview-grid {
-    > div[role='row'] {
+    > div {
       @apply grid-cols-2;
     }
   }
 
   .product-info {
-    > div[role='row'] {
-      @apply grid-cols-1;
+    > div {
+      @apply gap-0 grid-cols-1;
     }
   }
 }
 
 @screen xl {
   .product-info {
-    > div[role='row'] {
-      @apply grid-cols-2;
+    > div {
+      @apply gap-8 grid-cols-2;
     }
   }
 }
