--- a/src/scss/layouts/_product-review.scss
+++ b/src/scss/layouts/_product-review.scss
@@ -57,7 +57,8 @@
 }
 
 .limited-stocks {
-  @apply flex items-center justify-center mt-6 space-x-2;
+  @apply flex flex-col justify-center items-center text-center mt-6 space-y-2;
+  @apply md:flex-row md:text-left md:space-x-2 md:space-y-0;
 }
 
 .limited-stocks__text {
