Rename class names

--- a/src/scss/components/_icons.scss
+++ b/src/scss/components/_icons.scss
@@ -11,5 +11,5 @@
 }
 
 .shopping-cart-icon {
-  @apply w-6 h-6 bg-shopping-cart-icon bg-no-repeat bg-center bg-cover;
+  @apply w-6 h-6 bg-shopping-cart bg-no-repeat bg-center bg-cover;
 }
