Add shopping cart styles

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -11,5 +11,14 @@
 }
 
 .header__shopping-cart {
-  @apply w-12 h-12;
+  @apply relative;
+
+  > button {
+    @apply w-8 h-8 bg-shopping-cart-white bg-no-repeat bg-center bg-cover;
+  }
+
+  > .shopping-cart-items {
+    @apply absolute -top-2 -right-2 w-5 h-5 text-black font-medium text-sm text-center rounded-full;
+    @apply bg-primary;
+  }
 }
