--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -4,8 +4,7 @@
 @use 'components/typography';
 
 // Layouts
-@use 'layouts/special-offer-banner';
-@use 'layouts/header';
+// @use 'layouts/header';
 @use 'layouts/product-review';
 @use 'layouts/about-us';
 @use 'layouts/how-were-different';
